<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ParentDetailActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/gradient_dashboard_background"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="5dp"
                android:src="@drawable/v2_right_arror_icon"></ImageView>

            <TextView
                android:id="@+id/txt_model_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:text="Monroney - Test"
                android:textColor="@android:color/white"
                android:textSize="17sp"></TextView>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_parent_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_shape"
                android:hint="@string/parent_app_id"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="15dp"
                android:singleLine="true"
                android:text="2"></EditText>

            <EditText
                android:id="@+id/et_model_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_shape"
                android:hint="@string/model_id"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="15dp"
                android:singleLine="true"
                android:text="2"></EditText>

            <EditText
                android:id="@+id/et_con_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_shape"
                android:hint="@string/constring"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:padding="15dp"
                android:singleLine="true"
                android:text="HIYE581JrCIwtuR0UXCdlXljFopuDPFT2+ATxXLOEVp2EbhFjn1oD1W8Rg2JlS+6gX0rRN4gfg2Urx7dJEv3pvvKgx/UsrMjb9AtoihEwzGx7JYagUWz8CzACK1bAaiYt107LTopqB8mGyBbzLque5UYDIN/D5V2nyNl7cbEVxefECoRk+WOzpXxzuNm6uhS"></EditText>

            <EditText
                android:id="@+id/et_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_shape"
                android:hint="User id"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:padding="15dp"
                android:singleLine="true"
                android:text="1"></EditText>

            <EditText
                android:id="@+id/et_emp_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_shape"
                android:hint="Emp id"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:padding="15dp"
                android:singleLine="true"
                android:text="000"></EditText>

            <EditText
                android:id="@+id/et_site_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_shape"
                android:hint="SiteCode"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:padding="15dp"
                android:singleLine="true"
                android:text="000"></EditText>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:padding="15dp"
                android:text="@string/submit"
                android:textColor="@android:color/white"></Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>