<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"></ProgressBar>
    <LinearLayout
        android:id="@+id/title_lyt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/gradient_dashboard_background"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:src="@drawable/v2_right_arror_icon"></ImageView>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                app:closeIcon="@drawable/v2_close_icon">

            </androidx.appcompat.widget.SearchView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="Search"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/white"
                app:hintTextColor="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_color_background"
                    android:textColor="@android:color/black"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:src="@drawable/v2_search_icon"
                android:visibility="gone"></ImageView>
            <ImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="5dp"
                android:src="@drawable/v2_right_arror_icon"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_activity_name"
                android:textAlignment="center"
                android:text=""
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_weight="1"></TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/v2_logo_white_icon"
                android:visibility="gone"></ImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/v2_notification_icon"></ImageView>

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/person_icon" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_log_out"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:visibility="gone"
                android:src="@drawable/ic_logout"></ImageView>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@+id/title_lyt">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/txt_input_vin_no"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/key_vin">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txt_edit_vin_no"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                                android:inputType="textFilter|textNoSuggestions|textCapCharacters"
                                android:maxLength="18"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textAllCaps="true"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/txt_input_acc_code"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/key_acc_code">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txt_edit_acc_code"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789- "
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textAllCaps="true"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/txt_input_acc_desc"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/key_acc_desc">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txt_edit_acc_desc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789- "
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textAllCaps="true">

                            </com.google.android.material.textfield.TextInputEditText>
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>
                    <Button
                        android:id="@+id/btn_test"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:padding="15dp"
                        android:text="Test"
                        android:layout_alignParentBottom="true"
                        android:textAllCaps="false"></Button>
                </LinearLayout>
               <!-- <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:padding="10dp">





                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_input_model"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/txt_model">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_edit_model"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:enabled="false"
                            android:textAllCaps="true">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_input_year"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/txt_year">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_edit_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:inputType="number"
                            android:maxLength="4"
                            android:maxLines="1"
                            android:enabled="false"
                            android:singleLine="true"
                            android:textAllCaps="true">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_input_properties"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:visibility="gone"
                        android:hint="Other Properties">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_edit_properties"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:inputType="text"
                            android:textAllCaps="true"></com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>-->
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>